--- a/openshift/openshift-template.yml
+++ b/openshift/openshift-template.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Template
 labels:
-  template: openshift-jenkins
+  template: jenkins
 metadata:
-  name: openshift-jenkins
+  name: jenkins
 parameters:
 - name: GIT_REPO
   required: true
@@ -49,13 +49,13 @@ objects:
   metadata:
     name: ${JENKINS_SERVICE_NAME}
     labels:
-      app: openshift-jenkins
+      app: jenkins
 - kind: BuildConfig
   apiVersion: v1
   metadata:
     name: ${JENKINS_SERVICE_NAME}
     labels:
-      app: openshift-jenkins
+      app: jenkins
   spec:
     source:
       type: Git
@@ -78,7 +78,7 @@ objects:
   metadata:
     name: ${JENKINS_SERVICE_NAME}
     labels:
-      app: openshift-jenkins
+      app: jenkins
   spec:
     tls:
       insecureEdgeTerminationPolicy: Redirect
@@ -91,7 +91,7 @@ objects:
   metadata:
     name: ${JENKINS_SERVICE_NAME}
     labels:
-      app: openshift-jenkins
+      app: jenkins
   spec:
     replicas: 1
     selector:
@@ -183,14 +183,14 @@ objects:
       serviceaccounts.openshift.io/oauth-redirectreference.jenkins: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"${JENKINS_SERVICE_NAME}"}}'
     name: ${JENKINS_SERVICE_NAME}
     labels:
-      app: openshift-jenkins
+      app: jenkins
 - apiVersion: v1
   groupNames: null
   kind: RoleBinding
   metadata:
     name: ${JENKINS_SERVICE_NAME}_edit
     labels:
-      app: openshift-jenkins
+      app: jenkins
   roleRef:
     name: edit
   subjects:
@@ -201,7 +201,7 @@ objects:
   metadata:
     name: ${JNLP_SERVICE_NAME}
     labels:
-      app: openshift-jenkins
+      app: jenkins
   spec:
     ports:
     - name: agent
@@ -222,7 +222,7 @@ objects:
       service.openshift.io/infrastructure: "true"
     name: ${JENKINS_SERVICE_NAME}
     labels:
-      app: openshift-jenkins
+      app: jenkins
   spec:
     ports:
     - name: web
